# ai_audio

./: CODE_ANALYSIS.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_driver.c  app_driver.h  idf_component.yml  main.c
main/audio/: Audio_common.h  Mic_driver.c  Mic_driver.h  Speaker_driver.c  Speaker_driver.h
main/speech_det_driver/: mic_speech.c  mic_speech.h
main/websocket/: websocket_client.c  websocket_client.h
main/websocket_driver/: websocket.c  websocket.h
main/wifi/: wifi_connect.c  wifi_connect.h
